--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,9 @@ html {
 
 body {
     font-family: 'Fira Sans Condensed', sans-serif;
+    background-image: url(../img/unryu_background.jpg);
+    background-size: cover;
+    background-repeat: repeat-y;
 }
 
 h1 {
@@ -20,4 +23,8 @@ h1 {
 h2 {
     font-family: 'Vollkorn', serif;
     font-weight: bold;
+}
+
+#container {
+    width: 90%;
 }
