--- a/css/main.css
+++ b/css/main.css
@@ -28,3 +28,9 @@ h2 {
 #container {
     width: 96%;
 }
+
+header {
+    width: 100%;
+    height: 5rem;
+    background-color: rgba(251, 251, 251, 0.8);
+}
