--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,21 @@ h2 {
 
 header {
     width: 100%;
-    height: 5rem;
+    height: 7rem;
     background-color: rgba(251, 251, 251, 0.8);
+    position: absolute;
+    top: 0;
+    padding: 2%;
+}
+
+header h1,
+header p {
+    text-align: right;
+    margin: 0;
+    font-size: 1rem;
+}
+
+header h1 {
+    margin-top: 1.8rem;
+    margin-bottom: 0.1rem;
 }
