--- a/css/main.css
+++ b/css/main.css
@@ -42,13 +42,15 @@ h2 {
 
 #container {
     width: 96%;
+    margin: auto;
+    position: relative;
+    top: 8rem;
 }
 
 header {
     width: 100%;
     height: 7rem;
     background-color: rgba(251, 251, 251, 0.8);
-    position: absolute;
     top: 0;
     padding: 2%;
 }
@@ -80,7 +82,7 @@ header p {
     vertical-align: top;
 }
 
-#logo-box figure img {
+* figure img {
     width: 100%;
 }
 
@@ -100,4 +102,16 @@ header p {
     width: 24%;
     margin-left: 9%;
     margin-right: 0;
+}
+
+.inline {
+    display: inline;
+}
+
+#images figure img {
+    border: 1rem solid #1f1d25;
+}
+
+#images figure img:hover {
+    border: 1rem solid rgba(31, 29, 37, 0.85);
 }
