--- a/css/main.css
+++ b/css/main.css
@@ -130,7 +130,9 @@ header p {
     max-width: 582px;
 }
 
+
 #buttons figure {
+    position: relative;
     display: inline-block;
     vertical-align: top;
     width: 47%;
@@ -145,20 +147,64 @@ header p {
     font-family: 'Vollkorn', serif;
     font-weight: bold;
     color: #f9f1b1;
-    font-size: 1.5rem;
+    font-size: 1rem;
     text-align: center;
-    position: relative;
-    margin-top: -25%;
+    position: absolute;
+    width: 100%;
+    margin: 20% auto 0 auto;
+    z-index: 99999;
+}
+#buttons figure figcaption.two {
+    opacity: 0;
 }
 
 #buttons figure#newsletter figcaption {
-    margin-top: -31%;
+    margin: 10% auto 0 auto;
     color: #464646;
+    z-index: 99999;
 }
 
-#buttons figure img {
-    filter: drop-shadow();
+#buttons figure div .topimg {
+    z-index: 9999;
+    transition: opacity 0.25s linear;
 }
+
+#buttons figure div .middleimg {
+    z-index: 999;
+    transition: opacity 0.25s linear;
+}
+
+#buttons figure div .bottomimg {
+    z-index: 9;
+    transition: opacity 0.25s linear;
+}
+
+#buttons figure div:hover > .topimg {
+    opacity: 0;
+}
+
+#buttons figure div:active > .middleimg,
+#buttons figure div:active > figcaption.one {
+    opacity: 0;
+}
+
+#buttons figure div:active > figcaption.two {
+    opacity: 1;
+}
+
+#buttons figure div img {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+
+
+/*figure#donate div:hover ~ figure#donate div .normal {
+    transition: opacity 0.25s linear;
+    opacity: 0;
+    cursor: pointer;
+}*/
 
 .drop-shadow {
     -webkit-filter: drop-shadow(0 1px 3px rgba(31, 29, 37, 0.5));
