--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,13 @@ h1 {
 
 h2 {
     font-family: 'Vollkorn', serif;
-    font-weight: bold;
+    font-weight: 900;
+}
+
+h3 {
+    font-family: 'Fira Sans Condensed', sans-serif;
+    font-weight: 700;
+    color: #ed1c24;
 }
 
 #container {
@@ -128,6 +134,7 @@ header p {
 
 #buttons {
     max-width: 582px;
+    padding-bottom: 3rem;
 }
 
 
@@ -154,6 +161,7 @@ header p {
     margin: 20% auto 0 auto;
     z-index: 99999;
 }
+
 #buttons figure figcaption.two {
     opacity: 0;
 }
@@ -198,18 +206,15 @@ header p {
     left: 0;
 }
 
-
-
-/*figure#donate div:hover ~ figure#donate div .normal {
-    transition: opacity 0.25s linear;
-    opacity: 0;
-    cursor: pointer;
-}*/
-
 .drop-shadow {
     -webkit-filter: drop-shadow(0 1px 3px rgba(31, 29, 37, 0.5));
     -moz-filter: drop-shadow(0 1px 3px rgba(31, 29, 37, 0.5));
     -ms-filter: drop-shadow(0 1px 3px rgba(31, 29, 37, 0.5));
     -o-filter: drop-shadow(0 1px 3px rgba(31, 29, 37, 0.5));
     filter: drop-shadow(0 1px 3px rgba(31, 29, 37, 0.5));
+}
+
+#fonts span.lighter p {
+    margin: 0;
+    color: #555555;
 }
