--- a/css/main.css
+++ b/css/main.css
@@ -33,17 +33,20 @@ body {
 h1 {
     font-family: 'Fira Sans Condensed', sans-serif;
     font-weight: bold;
+
 }
 
 h2 {
     font-family: 'Vollkorn', serif;
     font-weight: 900;
+    font-size: 2rem;
 }
 
 h3 {
     font-family: 'Fira Sans Condensed', sans-serif;
     font-weight: 700;
     color: #ed1c24;
+    font-size: 1.4rem;
 }
 
 #container {
@@ -127,6 +130,11 @@ header p {
     width: 47%;
     margin: 0 4% 4% 0;
 }
+
+#colors figure figcaption {
+    color: #555555;
+}
+
 
 #colors figure:nth-of-type(2n) {
     margin-right: 0;
