Replace background img with overlay bg

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ html {
 body {
     font-family: 'Fira Sans Condensed', sans-serif;
     color: #1f1d25;
-    background-image: url(../img/unryu_background.jpg);
+    background-image: url(../img/unryu_background2.jpg);
     background-size: cover;
     background-repeat: repeat-y;
 }
