--- a/css/main.css
+++ b/css/main.css
@@ -116,10 +116,6 @@ header p {
     margin-right: 0;
 }
 
-.inline {
-    display: inline;
-}
-
 #images figure img {
     border: 1rem solid #1f1d25;
 }
@@ -285,6 +281,18 @@ footer {
     #logo-box {
         width: 85%;
     }
+
+    #images figure {
+        display: inline-block;
+        width: 37.5%;
+        margin: 1em 2% 1em 0;
+    }
+
+    #images figure:last-of-type {
+        display: inline-block;
+        width: 59.5%;
+        margin: 1em 0 1em 0;
+    }
 }
 
 @media all and (min-width: 600px) {
@@ -317,7 +325,7 @@ footer {
     }
 }
 
-@media all and (min-width: 700px) {
+@media all and (min-width: 800px) {
 
     #container {
         top: 11rem;
@@ -331,10 +339,17 @@ footer {
     #logo-box {
         position: absolute;
         top: 2rem;
+        width: 78%;
         max-width: 650px;
     }
 
-    #logo-box figure:last-of-type {
+    #logo-box figure:nth-of-type(2) {
         float: right;
     }
+
+    .clearfix {
+        clear: both;
+    }
+
+
 }
