--- a/css/main.css
+++ b/css/main.css
@@ -307,13 +307,13 @@ footer {
 
     #images figure {
         display: inline-block;
-        width: 37.5%;
+        width: 36.9%;
         margin: 1em 2% 1em 0;
     }
 
     #images figure:last-of-type {
         display: inline-block;
-        width: 59.5%;
+        width: 60.5%;
         margin: 1em 0 1em 0;
     }
 
@@ -400,6 +400,10 @@ footer {
 
     header h1 {
         font-size: 1.4rem;
+    }
+
+    h2 {
+        font-size: 2.2rem;
     }
 
     #logo-box {
