--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,6 @@ body {
 h1 {
     font-family: 'Fira Sans Condensed', sans-serif;
     font-weight: bold;
-
 }
 
 h2 {
@@ -61,7 +60,7 @@ h3 {
 header {
     width: 100%;
     height: 7rem;
-    background-color: rgba(251, 251, 251, 0.8);
+    background-color: #1f1d25;
     top: 0;
     padding: 2%;
 }
@@ -71,6 +70,7 @@ header p {
     text-align: right;
     margin: 0;
     font-size: 1rem;
+    color: #ffffff;
 }
 
 header h1 {
@@ -276,7 +276,7 @@ footer {
     position: relative;
     width: 100%;
     height: 3.5rem;
-    background-color: rgba(251, 251, 251, 0.8);
+    background-color: #1f1d25;
     bottom: -7rem;
     padding: 2%;
 }
@@ -330,13 +330,13 @@ footer {
 
     #images figure {
         display: inline-block;
-        width: 36.9%;
+        width: 37.2%;
         margin: 1em 2% 1em 0;
     }
 
     #images figure:last-of-type {
         display: inline-block;
-        width: 60.5%;
+        width: 59.15%;
         margin: 1em 0 1em 0;
     }
 
@@ -374,6 +374,10 @@ footer {
         font-size: 1.3rem;
         padding-top: 1.2%;
     }
+
+    #images figure:last-of-type {
+        width: 59.7%;
+    }
 }
 
 @media all and (min-width: 700px) {
@@ -393,6 +397,10 @@ footer {
     #logo-box figure figcaption {
         font-size: 1.5rem;
         padding-top: 1.2%;
+    }
+
+    #images figure:last-of-type {
+        width: 60.2%;
     }
 
     #colors figure,
@@ -434,12 +442,28 @@ footer {
         max-width: 650px;
     }
 
+    #images figure {
+        width: 37%;
+    }
+
+    #images figure:last-of-type {
+        width: 60.4%;
+    }
+
     .clearfix {
         clear: both;
     }
 }
 
 @media all and (min-width: 1000px) {
+
+    #images figure {
+        width: 37%;
+    }
+
+    #images figure:last-of-type {
+        width: 59%;
+    }
 
     main {
         width: 55%;
