--- a/css/main.css
+++ b/css/main.css
@@ -275,8 +275,9 @@ p#link:active {
 #logo2 {
     background-color: #ffffff;
     border-radius: 50%;
-    padding: 10% 12% 12% 10%;
+    padding: 6% 12% 7% 10%;
     width: 50%;
+    max-width: 200px;
     margin: auto;
 }
 
@@ -288,7 +289,6 @@ footer {
     bottom: -7rem;
     padding: 2%;
 }
-
 
 @media all and (min-width: 400px) {
 
