--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,7 @@ h2 {
     font-family: 'Vollkorn', serif;
     font-weight: 900;
     font-size: 2rem;
+    margin-bottom: 0.5rem;
 }
 
 h3 {
@@ -46,6 +47,7 @@ h3 {
     font-weight: 700;
     color: #ed1c24;
     font-size: 1.4rem;
+    margin-bottom: 0.5rem;
 }
 
 #container {
@@ -249,6 +251,10 @@ aside p {
     max-width: 750px;
 }
 
+#fonts {
+    background-color: rgba(251, 251, 251, 0.5);
+    padding: 0.1% 3% 3% 3%;
+}
 
 #fonts span.lighter p {
     margin: 0;
