--- a/css/main.css
+++ b/css/main.css
@@ -261,21 +261,22 @@ aside p {
     color: rgba(31, 29, 37, 0.7);
 }
 
-p#link {
+h4 a {
     width: 4rem;
     padding: 0;
     color: #406fb6;
     text-align: center;
     margin: 3rem auto;
-
+    text-decoration: none;
 }
 
-p#link:hover {
+h4 a:hover {
     text-decoration: underline;
 }
 
-p#link:active {
+h4 a:active {
     color: #84449a;
+    text-decoration: none;
 }
 
 #logo2 {
