--- a/css/main.css
+++ b/css/main.css
@@ -546,4 +546,22 @@ footer {
         margin-right: 0;
     }
 
+    header h1 {
+        margin-top: 1rem;
+    }
+
+    h2 {
+        font-size: 2.5rem;
+    }
+
+    h3 {
+        font-size: 1.7rem;
+    }
+
+    p,
+    h4 {
+        font-size: 1.2rem;
+        line-height: 1.5rem;
+    }
+
 }
