--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/* Set all box sizing to border-box */
 html {
     box-sizing: border-box;
 }
@@ -22,6 +23,7 @@ html {
     white-space: nowrap; /* 1 */
 }
 
+/* Insert background image and set initial fonts */
 body {
     font-family: 'Fira Sans Condensed', sans-serif;
     color: #1f1d25;
@@ -50,6 +52,7 @@ h3 {
     margin-bottom: 0.5rem;
 }
 
+/* Container to hold max-width of elements on the page */
 #container {
     width: 96%;
     max-width: 1600px;
@@ -59,6 +62,7 @@ h3 {
     margin-bottom: 2rem;
 }
 
+/* Header styles */
 header {
     width: 100%;
     height: 7rem;
@@ -84,6 +88,12 @@ header p {
     padding-bottom: 3%;
 }
 
+/* Default all images to be 100% of the figure */
+* figure img {
+    width: 100%;
+}
+
+/* Main logo styles */
 #logo-box {
     background-color: #ffffff;
     width: 90%;
@@ -100,32 +110,33 @@ header p {
     margin-right: 5%;
 }
 
-* figure img {
-    width: 100%;
-}
-
 #logo-box figure figcaption {
     width: 160%;
     font-weight: bold;
     font-size: 0.75rem;
 }
 
+/* Center all figcaptions in the main */
 main figcaption {
     text-align: center;
 }
 
+/* Create frame for photographic images */
 #images figure img {
     border: 1rem solid #1f1d25;
 }
 
+/* Set frame on pictures to 85% opacity on hover */
 #images figure img:hover {
     border: 1rem solid rgba(31, 29, 37, 0.85);
 }
 
+/* Box shadow for texture images */
 #textures figure img {
     box-shadow: 2px 3px 4px rgba(31, 29, 37, 0.5);
 }
 
+/* Style hex color blocks to be 2 blocks wide */
 #colors figure {
     position: relative;
     display: inline-block;
@@ -133,6 +144,11 @@ main figcaption {
     margin: 0 4% 4% 0;
 }
 
+#colors figure:nth-of-type(2n) {
+    margin-right: 0;
+}
+
+/* Position figcaption on transparent white background at bottom of color blocks to appear on hover */
 #colors figure figcaption {
     color: rgba(31, 29, 37, 0.7);
     position: absolute;
@@ -150,17 +166,11 @@ main figcaption {
     opacity: 1;
 }
 
-
-
-#colors figure:nth-of-type(2n) {
-    margin-right: 0;
-}
-
+/* Style Donate and Newsletter buttons */
 #buttons {
     max-width: 582px;
     padding-bottom: 6rem;
 }
-
 
 #buttons figure {
     position: relative;
@@ -187,6 +197,7 @@ main figcaption {
     z-index: 99999;
 }
 
+/* Hide Thank You figcation */
 #buttons figure figcaption.one-2 {
     opacity: 0;
 }
@@ -212,33 +223,40 @@ main figcaption {
     transition: opacity 0.25s linear;
 }
 
+/* Hide top button with opacity:0 on hover */
 #buttons figure div:hover > .topimg {
     opacity: 0;
 }
 
+/* Change color of font from yellow to red on hover */
 #buttons figure div:hover > figcaption.one-1 {
     color: #ed1c24;
 }
 
+/* Change color of font from blue-black to yellow on hover */
 #buttons figure#newsletter div:hover > figcaption.two {
     color: #faf185;
 }
 
+/* Hide middle image and Donate Now figcaption on mouse click  */
 #buttons figure div:active > .middleimg,
 #buttons figure div:active > figcaption.one-1 {
     opacity: 0;
 }
 
+/* Reveal Thank you figcaption on click */
 #buttons figure div:active > figcaption.one-2 {
     opacity: 1;
 }
 
+/* Position the button figures stacked on top of one another */
 #buttons figure div img {
     position: absolute;
     top: 0;
     left: 0;
 }
 
+/* Drop shadow for irregular shaped png image of buttons */
 .drop-shadow {
     -webkit-filter: drop-shadow(0 1px 3px rgba(31, 29, 37, 0.5));
     -moz-filter: drop-shadow(0 1px 3px rgba(31, 29, 37, 0.5));
@@ -247,6 +265,7 @@ main figcaption {
     filter: drop-shadow(0 1px 3px rgba(31, 29, 37, 0.5));
 }
 
+/* Begin to style aside, set max-width */
 aside p {
     max-width: 750px;
 }
@@ -268,7 +287,6 @@ ul#adjectives {
     font-size: 1.5rem;
     font-style: italic;
 }
-
 
 #fonts span.lighter p {
     margin: 0;
@@ -292,12 +310,14 @@ h4 a:active {
     text-decoration: none;
 }
 
+/* Style Art Center logo at bottom of page */
 #logo2 {
     width: 50%;
     max-width: 200px;
     margin: auto;
 }
 
+/* Create a block of color for the footer */
 footer {
     position: relative;
     width: 100%;
@@ -307,8 +327,14 @@ footer {
     padding: 2%;
 }
 
+/* ****************************** BEGIN MEDIA QUERIES ************************************ */
+
+/* ****************************** BEGIN MEDIA QUERIES ************************************ */
+
+/* ****************************** min-width:400px ************************************ */
 @media all and (min-width: 400px) {
 
+    /* Increase relative positioning distance of container from top and match distance on footer */
     #container {
         top: 10rem;
     }
@@ -317,25 +343,31 @@ footer {
         bottom: -10rem;
     }
 
+    /* Decrease logo-box width */
     #logo-box {
         width: 88%;
     }
 
+    /* Increase font size of Title line */
     #logo-box figure figcaption {
         font-size: 0.85rem;
         padding-top: 1%;
     }
 }
 
+/* ****************************** min-width:420px ************************************ */
 @media all and (min-width: 420px) {
 
+    /* Increase font size on Buttons as page enlarges */
     #buttons figure figcaption {
         font-size: 1.2rem;
     }
 }
 
+/* ****************************** min-width:500px ************************************ */
 @media all and (min-width: 500px) {
 
+    /* Increase relative positioning distance of container from top and match distance on footer */
     #container {
         top: 12rem;
     }
@@ -344,10 +376,12 @@ footer {
         bottom: -12rem;
     }
 
+    /* Decrease logo-box width */
     #logo-box {
         width: 85%;
     }
 
+    /* Increase font size of Title line */
     #logo-box figure figcaption {
         font-size: 1.1rem;
         padding-top: 1.2%;
