--- a/css/main.css
+++ b/css/main.css
@@ -310,6 +310,11 @@ h4 a:active {
     text-decoration: none;
 }
 
+h4 a:visited {
+    color: #84449a;
+    text-decoration: none;
+}
+
 /* Style Art Center logo at bottom of page */
 #logo2 {
     width: 50%;
